[package]
name = "aht20-embassy"
version = "0.0.1"
edition = "2024"
authors = ["biggiePete"]
license = "MIT"
description = "An async driver for the AHT20 temperature and humidity sensor using embassy."
repository = "https://github.com/https://github.com/BiggiePete/aht20-embassy/aht20-embassy"
keywords = ["embedded", "embassy", "aht20", "sensor", "stm32"]
categories = ["embedded", "hardware-support", "no-std"]

# to build: cargo build --features embassy-stm32/stm32wle5cb


[dependencies]

defmt = "1"
defmt-rtt = "1.0.0"
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
panic-probe = { version = "1", features = ["print-defmt"] }
embassy-stm32 = { version = "0.2.0", features = [
  "defmt",
  "time-driver-any",
  "memory-x",
  "unstable-pac",
  "exti",
  "chrono",
  "low-power-debug-with-sleep",
] }
